# gen_autoconf

./: CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  _config.yml  gen_autoconf_run.py  setup.cfg  setup.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  gen_autoconf_bug_report.md  gen_autoconf_feature_request.md
.github/workflows/: gen_autoconf_docker_checker.yml  gen_autoconf_package.yml  gen_autoconf_package_checker.yml  gen_autoconf_py_checker.yml  gen_autoconf_python2_build.yml  gen_autoconf_python2_publish.yml  gen_autoconf_python3_build.yml  gen_autoconf_python3_publish.yml  gen_autoconf_python_checker.yml  gen_autoconf_toc.yaml  gen_autoconf_toc.yml  gen_autoconf_triage.yml  gen_autoconf_triage_label.yml
docs/source/: conf.py  gen_autoconf.pro.config.pro_name.rst  gen_autoconf.pro.config.rst  gen_autoconf.pro.read_template.rst  gen_autoconf.pro.rst  gen_autoconf.pro.write_template.rst  gen_autoconf.rst  gen_autoconf_run.rst  index.rst  modules.rst
gen_autoconf/: .editorconfig  __init__.py
gen_autoconf/conf/: .editorconfig  gen_autoconf.cfg  gen_autoconf.logo  gen_autoconf_util.cfg  project.yaml
gen_autoconf/pro/: __init__.py  gen_pro.py  read_template.py  write_template.py
gen_autoconf/run/: gen_autoconf_run.py
simple_test/src/: Makefile.am
tests/: .coverage  coverage.xml  gen_autoconf  gen_autoconf_coverage.json  gen_autoconf_coverage.xml  gen_autoconf_pro_test.py  gen_autoconf_test.py  read_template_test.py  run_coverage.sh  test_pro_config.py  test_pro_name.py  test_read_template.py  test_template_dir.py  test_write_template.py  write_template_test.py
tests/full_simple/: Makefile.am  README.md  autogen.sh  configure.ac
tests/full_simple/src/: Makefile.am  main.c
tests/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_502a78492c0c1477___init___py.html  (+3 more)
tests/latest/: Makefile.am  (+2 more)
(+25 files in other folders)
